--- a/package.json
+++ b/package.json
@@ -9,16 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@hookform/resolvers": "^2.9.8",
+    "@mui/icons-material": "^5.10.6",
+    "@mui/material": "^5.10.7",
+    "@reduxjs/toolkit": "^1.8.5",
+    "axios": "^0.27.2",
+    "cookies": "^0.8.0",
+    "http-proxy": "^1.18.1",
     "next": "12.3.1",
+    "next-auth": "^4.15.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.36.1",
+    "react-redux": "^8.0.4",
+    "react-toastify": "^9.1.1",
+    "sharp": "^0.31.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/cookies": "^0.7.7",
+    "@types/http-proxy": "^1.17.9",
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.12",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.8.4"
   }
 }
