--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# API_URL=http://localhost:3003/api
+API_URL=http://localhost:3001
 
 NEXTAUTH_URL=http://localhost:3000/
 NEXTAUTH_SECRET=mg+eY6YYTirnpMVU/joaQY7fCHO3R9YAbZfntDZMHes
