--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@hookform/resolvers": "^2.9.8",
     "@mui/icons-material": "^5.10.6",
-    "@mui/material": "^5.10.7",
+    "@mui/material": "^5.10.13",
+    "@mui/x-data-grid": "^5.17.13",
+    "@mui/x-data-grid-pro": "^5.17.16",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "cookies": "^0.8.0",
@@ -21,11 +23,14 @@
     "next": "12.3.1",
     "next-auth": "^4.15.0",
     "react": "18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.36.1",
     "react-redux": "^8.0.4",
     "react-toastify": "^9.1.1",
+    "recharts": "^2.1.16",
     "sharp": "^0.31.1",
+    "tw-elements": "^1.0.0-alpha12",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -35,6 +40,7 @@
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@types/recharts": "^1.8.24",
     "autoprefixer": "^10.4.12",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
